Fix drag and drop (crash), add elements scrolling in sublist when there is too much elements, fix the grabbing of elements for the drag and drop

--- a/assets/style.css
+++ b/assets/style.css
@@ -178,6 +178,15 @@ QLabel.sublist-title {
     color: #feffff;
 }
 
+QScrollArea.sublist-scroll {
+    background-color: #1f2024;
+    border: none;
+}
+
+QWidget.sublist-container {
+    background-color: #1f2024;
+}
+
 QPushButton.sublist-add-button {
     border: none;
     image: url(":/cross.png");
